# history-cleaner

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
scripts/: clang-format.sh
src/: CMakeLists.txt  Config.cpp  Config.hpp  InputHandler.cpp  InputHandler.hpp  main.cpp
tests/: CMakeLists.txt
tests/InputHandler/: CMakeLists.txt  input_data.txt  test.cpp
